--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,4 +1,5 @@
-// $params
+@import url('https://fonts.googleapis.com/css?family=Work+Sans');
+
 @mixin box_shadow($params)
   -webkit-box-shadow: $params
   -moz-box-shadow:    $params
@@ -13,6 +14,7 @@
 
 body
   background: no-repeat top center fixed url('../images/paver_bg.jpg') #555
+  font-family: 'Work Sans', sans-serif
   @include background_size(cover)
 
 .content
