--- a/sass/style.sass
+++ b/sass/style.sass
@@ -25,6 +25,16 @@ body
   margin-top: 8vh
   color: #001310
 
+.button
+  background-color: #BEBFC7
+  @include box_shadow((inset -5px -5px 5px 0 rgba(20, 20, 20, 0.7), inset 5px 5px 5px 0 rgba(255, 255, 255, 0.3), 2px 2px 5px 3px rgba(20, 20, 20, 0.4)))
+  border: 0
+  font-size: 1.5em
+  min-height: 115px
+  .text
+    font-size: 3em
+    line-height: 0.9em
+
 .bsize
   height: 20vh
   margin-bottom: 2em
